--- a/index.html
+++ b/index.html
@@ -180,7 +180,33 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+  var fireballSize = 22;
+  var getFireballSpeed = function () {
+    if (left = true) {
+      getFireballSpeed = 5;
+    }
+    else {
+      getFireballSpeed = 2;
+    }
+    return getFireballSpeed;
+  }
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  var getWizardHeight = function () {
+    getWizardHeight = wizardWidth *  1.337;
+    return getWizardHeight;
+  }
+  function getWizardX(width) {
+    getWizardX = (width * 0.5) - (wizardWidth * 0.5);
+    return getWizardX;
+  }
+  function getWizardY(height) {
+    getWizardY = height - getWizardHeight;
+    return getWizardY;
+  }
 
+</script>
 <script src="js/game.js"></script>
 
 </body>
